:sparkles: S3 product get file 기능 구현.