@@ -3,10 +3,19 @@ package org.example.tentrilliondollars.s3;
 
 
 
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.model.S3ObjectInputStream;
+import com.amazonaws.util.IOUtils;
 import lombok.Builder;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import com.amazonaws.services.s3.AmazonS3Client;
+import com.amazonaws.services.s3.AmazonS3ClientBuilder;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import software.amazon.awssdk.core.ResponseInputStream;
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -14,15 +23,15 @@ import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
 import software.amazon.awssdk.services.s3.model.GetObjectResponse;
 import software.amazon.awssdk.services.s3.model.PutObjectRequest;
-
+import software.amazon.awssdk.services.s3.model.S3Object;
 import java.io.IOException;
+import java.net.URLEncoder;
 
 @Builder
 @Service
 public class S3Service {
 
     private final S3Client s3;
-
 
     public void putObject(String bucketName, String key, byte[] file){
         PutObjectRequest objectRequest = PutObjectRequest.builder()
@@ -32,13 +41,25 @@ public class S3Service {
         s3.putObject(objectRequest, RequestBody.fromBytes(file));
 
     }
-    public byte[] getObject(String bucketName,String key) throws IOException {
-    GetObjectRequest getObjectRequest = GetObjectRequest.builder()
-        .bucket(bucketName)
-        .key(key)
-        .build();
+    public ResponseEntity<byte[]> getProductImage(String bucketName,String key) throws IOException {
+        GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+                .bucket(bucketName)
+                .key(key)
+                .build();
 
-        ResponseInputStream<GetObjectResponse> res = s3.getObject(getObjectRequest);
-        return res.readAllBytes();
+        byte[] bytes = IOUtils.toByteArray(s3.getObject(getObjectRequest));
+
+        String fileName = URLEncoder.encode(key, "UTF-8").replaceAll("\\+", "%20");
+
+        HttpHeaders httpHeaders = new HttpHeaders();
+        httpHeaders.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+        httpHeaders.setContentLength(bytes.length);
+        httpHeaders.setContentDispositionFormData("attachment", fileName);
+
+        return new ResponseEntity<>(bytes, httpHeaders, HttpStatus.OK);
+
     }
+
+
+
 }
